kubernetes/virtualmachine/nodejs-ex.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: demo
  labels:
    kubevirt.io: virt-launcher
    kubevirt.io/domain: mongodb
spec:
  selector:
    kubevirt.io: virt-launcher
    kubevirt.io/domain: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017

---
kind: Service
apiVersion: v1
metadata:
  name: nodejs
  namespace: demo
  labels:
    kubevirt.io: virt-launcher
    kubevirt.io/domain: nodejs
spec:
  selector:
    kubevirt.io: virt-launcher
    kubevirt.io/domain: nodejs
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nodejs.ingress.virtomation.com
    http:
      paths:
      - backend:
          serviceName: nodejs
          servicePort: 8080
